--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "shelljs": "^0.8.1",
     "tslib": "^1.9.0"
   },
+  "optionalDependencies": {
+    "gulp-util": "^3.0.8"
+  },
   "bugs": {
     "url": "https://github.com/nelsonlaquet/miva-api/issues"
   },
