--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "rootDir": "src"
     },
     "include": [
-        "src/**/*"
+        "src/index.ts"
     ],
     "exclude": [
         "node_modules",
