--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "files.exclude": {
-        "node_modules": true
     },
     "search.exclude": {
-        "bin": true
+        "bin": true,
+        "node_modules": true
     }
 }
