--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "devDependencies": {
     "@nelsonlaquet/linters": "^1.0.1",
     "@types/node": "^9.4.7",
-    "@types/request": "^2.47.0",
-    "@types/request-promise-native": "^1.0.14",
     "@types/shelljs": "^0.7.8",
+    "@types/form-data": "^2.2.1",
+    "@types/node-fetch": "^1.6.7",
     "rimraf": "^2.6.2",
     "typescript": "^2.7.2"
   },
   "dependencies": {
-    "request": "^2.83.0",
-    "request-promise-native": "^1.0.5",
+    "form-data": "^2.3.2",
+    "node-fetch": "^2.1.2",
     "shelljs": "^0.8.1",
     "tslib": "^1.9.0"
   },
