--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "license": "ISC",
   "devDependencies": {
     "@nelsonlaquet/linters": "^1.0.1",
-    "@types/node": "^9.4.7",
-    "@types/shelljs": "^0.7.8",
     "@types/form-data": "^2.2.1",
+    "@types/node": "^9.4.7",
     "@types/node-fetch": "^1.6.7",
+    "@types/shelljs": "^0.7.8",
     "rimraf": "^2.6.2",
     "typescript": "^2.7.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.106",
+    "@types/lodash-es": "^4.17.0",
     "form-data": "^2.3.2",
+    "lodash": "^4.17.5",
     "node-fetch": "^2.1.2",
     "shelljs": "^0.8.1",
     "tslib": "^1.9.0"
